linked css and branch

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet">
     <title>Web3 Week 1</title>
 </head>
 <body>
     <h1>Web3 Week 1</h1>
+    <p>This is a simple HTML page to introduce the basics of Web3.0 development using Solidity and Truffle.</p>
 </body>
 </html>
